feat: create automation lamp and readme

--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
               red.classList.remove("red");
               yellow.classList.remove("yellow");
               green.classList.add("green");
-              setInterval(lamp())
+              //   setInterval(lamp(), 100)
+              lamp();
             }, 9000);
           }, 6000);
         }, 3000);
       }
-    //   setInterval(() => {
-    //     lamp()
-    //   }, 1000);
-    lamp()
+      //   setInterval(() => {
+      //     lamp()
+      //   }, 1000);
+      lamp();
     </script>
   </body>
 </html>
